--- a/src/index.html
+++ b/src/index.html
@@ -11,45 +11,111 @@
     <!-- Header tag -->
     <h1>World Wide Web</h1>
     <p>
-      The WorldWideWeb (W3) is a wide-area<a href="#"> hypermedia</a>
+      The WorldWideWeb (W3) is a wide-area<a
+        href="http://info.cern.ch/hypertext/WWW/WhatIs.html"
+      >
+        hypermedia</a
+      >
       information retrieval initiative aiming to give universal access to a
       large universe of documents.
     </p>
     <p>
       Everything there is online about W3 is linked directly or indirectly to
-      this document, including an <a href="#">executive summary</a> of the
-      project, <a href="#">Mailing lists</a> , <a href="#">Policy</a> ,
-      November's <a href="#">W3 news</a> ,
-      <a href="#">Frequently Asked Questions</a> .
+      this document, including an
+      <a href="http://info.cern.ch/hypertext/WWW/Summary.html"
+        >executive summary</a
+      >
+      of the project,
+      <a
+        href="http://info.cern.ch/hypertext/WWW/Administration/Mailing/Overview.html"
+        >Mailing lists</a
+      >
+      , <a href="http://info.cern.ch/hypertext/WWW/Policy.html">Policy</a> ,
+      November's
+      <a href="http://info.cern.ch/hypertext/WWW/News/9211.html">W3 news</a> ,
+      <a href="http://info.cern.ch/hypertext/WWW/FAQ/List.html"
+        >Frequently Asked Questions</a
+      >
+      .
     </p>
-    <dt><a href="#">What's out there?</a></dt>
+    <dt>
+      <a href="http://info.cern.ch/hypertext/DataSources/Top.html"
+        >What's out there?</a
+      >
+    </dt>
     <dd>
-      Pointers to the world's online information,<a href="#"> subjects</a> ,
-      <a href="#">W3 servers</a>, etc.
+      Pointers to the world's online information,<a
+        href="http://info.cern.ch/hypertext/DataSources/bySubject/Overview.html"
+      >
+        subjects</a
+      >
+      ,
+      <a href="http://info.cern.ch/hypertext/DataSources/WWW/Servers.html"
+        >W3 servers</a
+      >, etc.
     </dd>
-    <dt><a href="#">Help</a></dt>
+    <dt><a href="http://info.cern.ch/hypertext/WWW/Help.html">Help</a></dt>
     <dd>on the browser you are using</dd>
-    <dt><a href="#">Software Products</a></dt>
+    <dt>
+      <a href="http://info.cern.ch/hypertext/WWW/Status.html"
+        >Software Products</a
+      >
+    </dt>
     <dd>
       A list of W3 project components and their current state. (e.g.
-      <a href="#">Line Mode</a> ,X11 <a href="#">Viola</a> ,
-      <a href="#">NeXTStep</a> , <a href="#">Servers</a> ,
-      <a href="#">Tools</a> ,<a href="#"> Mail robot</a> ,<a href="#">
-        Library</a
+      <a href="http://info.cern.ch/hypertext/WWW/LineMode/Browser.html"
+        >Line Mode</a
       >
+      ,X11
+      <a href="http://info.cern.ch/hypertext/WWW/Status.html#35">Viola</a> ,
+      <a href="http://info.cern.ch/hypertext/WWW/NeXT/WorldWideWeb.html"
+        >NeXTStep</a
+      >
+      ,
+      <a href="http://info.cern.ch/hypertext/WWW/Daemon/Overview.html"
+        >Servers</a
+      >
+      ,
+      <a href="http://info.cern.ch/hypertext/WWW/Tools/Overview.html">Tools</a>
+      ,<a href="http://info.cern.ch/hypertext/WWW/MailRobot/Overview.html">
+        Mail robot</a
+      >
+      ,<a href="http://info.cern.ch/hypertext/WWW/Status.html#57"> Library</a>
       )
     </dd>
-    <dt><a href="#">Technical</a></dt>
+    <dt>
+      <a href="http://info.cern.ch/hypertext/WWW/Technical.html">Technical</a>
+    </dt>
     <dd>Details of protocols, formats, program internals etc</dd>
-    <dt><a href="#">Bibliography</a></dt>
+    <dt>
+      <a href="http://info.cern.ch/hypertext/WWW/Bibliography.html"
+        >Bibliography</a
+      >
+    </dt>
     <dd>Paper documentation on W3 and references.</dd>
-    <dt><a href="#">People</a></dt>
+    <dt><a href="http://info.cern.ch/hypertext/WWW/People.html">People</a></dt>
     <dd>A list of some people involved in the project.</dd>
-    <dt><a href="#">History</a></dt>
+    <dt>
+      <a href="http://info.cern.ch/hypertext/WWW/History.html">History</a>
+    </dt>
     <dd>A summary of the history of the project.</dd>
-    <dt><a href="#">How can I help</a> ?</dt>
+    <dt>
+      <a href="http://info.cern.ch/hypertext/WWW/Helping.html"
+        >How can I help</a
+      >
+      ?
+    </dt>
     <dd>If you would like to support the web..</dd>
-    <dt><a href="#">Getting code</a></dt>
-    <dd>Getting the code by <a href="#">anonymous FTP</a> , etc.</dd>
+    <dt>
+      <a href="http://info.cern.ch/hypertext/README.html">Getting code</a>
+    </dt>
+    <dd>
+      Getting the code by
+      <a
+        href="http://info.cern.ch/hypertext/WWW/LineMode/Defaults/Distribution.html"
+        >anonymous FTP</a
+      >
+      , etc.
+    </dd>
   </body>
 </html>
